adding homework, need to add ex credit later

--- a/Labs/Lab3/my_lab3.ipynb
+++ b/Labs/Lab3/my_lab3.ipynb
@@ -2146,24 +2146,13 @@
      "collapsed": false,
      "input": [
       "import yaml\n",
-      "credentials = yaml.load(open('../../../api_cred.yml'))\n",
+      "credentials = yaml.load(open('../../../../api_cred.yml'))\n",
       "api_key = credentials['kimono_key']"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "KeyError",
-       "evalue": "'kimono_key'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-69-49b2967c8254>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0myaml\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcredentials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../../../api_cred.yml'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mapi_key\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcredentials\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'kimono_key'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mKeyError\u001b[0m: 'kimono_key'"
-       ]
-      }
-     ],
-     "prompt_number": 69
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -2201,7 +2190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 68
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
