--- a/Labs/Lab4/my_lab04.ipynb
+++ b/Labs/Lab4/my_lab04.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bbd059326b1eab914e66124acee7c4570ce3f3ed4a45087270d00556a237e56e"
+  "signature": "sha256:2c019f92488ca1cf2ecc56deb71e424e3fb00c69b1d38aac1bddd88ab3800cd9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2525,7 +2525,7 @@
        ]
       }
      ],
-     "prompt_number": 233
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -2556,26 +2556,17 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "# Cross Validation Iteration #0\n",
-        "train indices: [ 37  78  90  45  16 121  66  24   8 126]...\n",
-        "test indices: [114  62  33 107   7 100  40  86  76  71]...\n"
-       ]
-      },
-      {
-       "ename": "TypeError",
-       "evalue": "only integer arrays with one element can be converted to an index",
+       "ename": "NameError",
+       "evalue": "name 'n_samples' is not defined",
        "output_type": "pyerr",
        "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-235-0332c2e72223>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"test indices: {0}...\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mmyknn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     print(\"train score: {0:.3f}, test score: {1:.3f}\\n\".format(\n\u001b[0;32m     13\u001b[0m         myknn.score(x[train], y[train]), myknn.score(x[test], y[test])))\n",
-        "\u001b[1;31mTypeError\u001b[0m: only integer arrays with one element can be converted to an index"
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-2-0332c2e72223>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mShuffleSplit\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m cv = ShuffleSplit(n_samples, n_iter=3, test_size=0.1,\n\u001b[0m\u001b[0;32m      4\u001b[0m     random_state=0)\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'n_samples' is not defined"
        ]
       }
      ],
-     "prompt_number": 235
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
