looking at mooc data

--- a/Project/MOOC.ipynb
+++ b/Project/MOOC.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fa4ca742c5dc950d81fdfb48d0d9de4c822e216597b310119daf12f523a0358b"
+  "signature": "sha256:0864df5db77dba0c64a9b06240fbc5a6121c5df064258c4fc219828d7988df12"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +37,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -79,7 +79,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -94,13 +94,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 4,
        "text": [
         "Index([u'course_id', u'userid_DI', u'registered', u'viewed', u'explored', u'certified', u'final_cc_cname_DI', u'LoE_DI', u'YoB', u'gender', u'grade', u'start_time_DI', u'last_event_DI', u'nevents', u'ndays_act', u'nplay_video', u'nchapters', u'nforum_posts', u'roles', u'incomplete_flag'], dtype='object')"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -122,7 +122,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 5,
        "text": [
         "array(['0', '0.07', '0.05', nan, '0.0', '0.13', '0.35', '1', '0.95',\n",
         "       '0.28', '0.04', '0.19', '0.18', '0.87', '0.01', '0.02', '0.62',\n",
@@ -140,7 +140,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -157,13 +157,13 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-21-a7f9a41f2aea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'grade'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_type\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-6-a7f9a41f2aea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'grade'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_type\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;32m/home/matt/anaconda/lib/python2.7/site-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   1841\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1842\u001b[0m             raise AttributeError(\"'%s' object has no attribute '%s'\" %\n\u001b[1;32m-> 1843\u001b[1;33m                                  (type(self).__name__, name))\n\u001b[0m\u001b[0;32m   1844\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1845\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'as_type'"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -171,7 +171,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -179,7 +180,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -193,7 +195,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 7,
        "text": [
         "0      1\n",
         "1      1\n",
@@ -230,7 +232,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -244,7 +246,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 8,
        "text": [
         "array(['HarvardX/CB22x/2013_Spring', 'HarvardX/CS50x/2012',\n",
         "       'HarvardX/ER22x/2013_Spring', 'HarvardX/PH207x/2012_Fall',\n",
@@ -257,7 +259,27 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data['userid_DI'].unique().shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "(476532,)"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -1708,7 +1730,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 9,
        "text": [
         "                          course_id       userid_DI  registered  viewed  \\\n",
         "0        HarvardX/CB22x/2013_Spring  MHxPC130442623           1       0   \n",
@@ -1966,7 +1988,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -3696,6 +3718,163 @@
       }
      ],
      "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data[data['grade']>0].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "(592766, 20)"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data[data['certified']>0].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "(17687, 20)"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data[data['explored']>0].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "(39686, 20)"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data[data['registered']>0].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "(641138, 20)"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data.shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "(641138, 20)"
+       ]
+      }
+     ],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data[data['viewed']>0].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "(400262, 20)"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print data[data['final_cc_cname_DI']=='India'].shape\n",
+      "print data[data['final_cc_cname_DI']=='China'].shape\n",
+      "print data[data['final_cc_cname_DI']=='United States'].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(88696, 20)\n",
+        "(5170, 20)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "(184240, 20)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
