--- a/Labs/Lab14/lab14_data_munging.ipynb
+++ b/Labs/Lab14/lab14_data_munging.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:59d00278c6f9781c918e02bc9301b05130820ec9c2692bf946b82fdda3489c74"
+  "signature": "sha256:6a78b289c909a65cea76bcc364f604040e92c8c45aaebaefd525b40091803c92"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,7 +14,17 @@
      "input": [
       "import pandas as pd\n",
       "import numpy as np\n",
-      "import datetime as dt"
+      "import datetime as dt\n",
+      "from sklearn.linear_model import LogisticRegression\n",
+      "from sklearn import tree\n",
+      "from sklearn.ensemble import RandomForestClassifier\n",
+      "import matplotlib.pyplot as plt\n",
+      "from sklearn import cross_validation\n",
+      "from sklearn.naive_bayes import GaussianNB\n",
+      "from sklearn.svm import SVC\n",
+      "from sklearn.datasets import load_digits\n",
+      "from sklearn.learning_curve import learning_curve\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
@@ -42,7 +52,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 162
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -192,7 +202,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 163,
+       "prompt_number": 4,
        "text": [
         "   0  1      2    3  4  5   6   7       8  9  10  11 12 13   14  15  \\\n",
         "0   0  b  32.33  7.5  u  g   e  bb   1.585  t  f   0  t  s  420   0   \n",
@@ -210,7 +220,7 @@
        ]
       }
      ],
-     "prompt_number": 163
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -250,7 +260,7 @@
        ]
       }
      ],
-     "prompt_number": 164
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -261,7 +271,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 153
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -272,7 +282,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 154
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -288,7 +298,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 156
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -654,7 +664,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 157,
+       "prompt_number": 9,
        "text": [
         "   0      2    3       8  11   14  15    16  17  ?_x  a  b  ?_y  l  u  y  ?_x  \\\n",
         "0  0  32.33  7.5   1.585   0  420   0  1890   0    0  0  1    0  0  1  0    0   \n",
@@ -686,7 +696,7 @@
        ]
       }
      ],
-     "prompt_number": 157
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -699,7 +709,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 159
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -710,7 +720,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 160
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -718,7 +728,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -750,7 +761,358 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.linear_model import LogisticRegression\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data.info()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "<class 'pandas.core.frame.DataFrame'>\n",
+        "Int64Index: 665 entries, 0 to 688\n",
+        "Data columns (total 54 columns):\n",
+        "0        665 non-null int64\n",
+        "2        665 non-null float64\n",
+        "3        665 non-null float64\n",
+        "8        665 non-null float64\n",
+        "11       665 non-null int64\n",
+        "14       665 non-null float64\n",
+        "15       665 non-null int64\n",
+        "16       665 non-null int64\n",
+        "17       665 non-null int64\n",
+        "?_x      665 non-null ?_x    float64\n",
+        "?_x    float64\n",
+        "dtype: object\n",
+        "a        665 non-null float64\n",
+        "b        665 non-null float64\n",
+        "?_y      665 non-null ?_y    float64\n",
+        "?_y    float64\n",
+        "dtype: object\n",
+        "l        665 non-null float64\n",
+        "u        665 non-null float64\n",
+        "y        665 non-null float64\n",
+        "?_x      665 non-null ?_x    float64\n",
+        "?_x    float64\n",
+        "dtype: object\n",
+        "g_x      665 non-null float64\n",
+        "gg       665 non-null float64\n",
+        "p_x      665 non-null float64\n",
+        "?_y      665 non-null ?_y    float64\n",
+        "?_y    float64\n",
+        "dtype: object\n",
+        "aa       665 non-null float64\n",
+        "c        665 non-null float64\n",
+        "cc       665 non-null float64\n",
+        "d        665 non-null float64\n",
+        "e        665 non-null float64\n",
+        "ff_x     665 non-null float64\n",
+        "i        665 non-null float64\n",
+        "j_x      665 non-null float64\n",
+        "k        665 non-null float64\n",
+        "m        665 non-null float64\n",
+        "q        665 non-null float64\n",
+        "r        665 non-null float64\n",
+        "w        665 non-null float64\n",
+        "x_x      665 non-null float64\n",
+        "?        665 non-null float64\n",
+        "bb       665 non-null float64\n",
+        "dd       665 non-null float64\n",
+        "ff_y     665 non-null float64\n",
+        "h        665 non-null float64\n",
+        "j_y      665 non-null float64\n",
+        "n        665 non-null float64\n",
+        "o        665 non-null float64\n",
+        "v        665 non-null float64\n",
+        "z_x      665 non-null float64\n",
+        "f_x      665 non-null float64\n",
+        "t_x      665 non-null t_x    float64\n",
+        "t_x    float64\n",
+        "dtype: object\n",
+        "f_y      665 non-null float64\n",
+        "t_y_x    665 non-null float64\n",
+        "f        665 non-null float64\n",
+        "t_x      665 non-null t_x    float64\n",
+        "t_x    float64\n",
+        "dtype: object\n",
+        "g_y      665 non-null float64\n",
+        "p_y      665 non-null float64\n",
+        "s        665 non-null float64\n",
+        "dtypes: float64(49), int64(5)"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print data.columns"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Index([0, 2, 3, 8, 11, 14, 15, 16, 17, u'?_x', u'a', u'b', u'?_y', u'l', u'u', u'y', u'?_x', u'g_x', u'gg', u'p_x', u'?_y', u'aa', u'c', u'cc', u'd', u'e', u'ff_x', u'i', u'j_x', u'k', u'm', u'q', u'r', u'w', u'x_x', u'?', u'bb', u'dd', u'ff_y', u'h', u'j_y', u'n', u'o', u'v', u'z_x', u'f_x', u't_x', u'f_y', u't_y_x', u'f', u't_x', u'g_y', u'p_y', u's'], dtype='object')\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "y = data[17].values\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = pd.merge(data.iloc[:,0:8], data.iloc[:,9:],left_index=True,right_index=True).values\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "model_lr = LogisticRegression(C=1).fit\n",
+      "print cross_validate(x,y,model_lr,20)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.980392156863\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "model_tree = tree.DecisionTreeClassifier(random_state=0).fit\n",
+      "cross_validate(x, y,model_tree,20)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "0.99852941176470578"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "model_forest = RandomForestClassifier(random_state=0).fit\n",
+      "cross_validate(x, y,model_forest,20)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "0.99407308377896619"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def plot_learning_curve(estimator, title, X, y, ylim=None, cv=None,\n",
+      "                        n_jobs=1, train_sizes=np.linspace(.1, 1.0, 5)):\n",
+      "    \"\"\"\n",
+      "    Generate a simple plot of the test and traning learning curve.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    estimator : object type that implements the \"fit\" and \"predict\" methods\n",
+      "        An object of that type which is cloned for each validation.\n",
+      "\n",
+      "    title : string\n",
+      "        Title for the chart.\n",
+      "\n",
+      "    X : array-like, shape (n_samples, n_features)\n",
+      "        Training vector, where n_samples is the number of samples and\n",
+      "        n_features is the number of features.\n",
+      "\n",
+      "    y : array-like, shape (n_samples) or (n_samples, n_features), optional\n",
+      "        Target relative to X for classification or regression;\n",
+      "        None for unsupervised learning.\n",
+      "\n",
+      "    ylim : tuple, shape (ymin, ymax), optional\n",
+      "        Defines minimum and maximum yvalues plotted.\n",
+      "\n",
+      "    cv : integer, cross-validation generator, optional\n",
+      "        If an integer is passed, it is the number of folds (defaults to 3).\n",
+      "        Specific cross-validation objects can be passed, see\n",
+      "        sklearn.cross_validation module for the list of possible objects\n",
+      "\n",
+      "    n_jobs : integer, optional\n",
+      "        Number of jobs to run in parallel (default 1).\n",
+      "    \"\"\"\n",
+      "    plt.figure()\n",
+      "    plt.title(title)\n",
+      "    if ylim is not None:\n",
+      "        plt.ylim(*ylim)\n",
+      "    plt.xlabel(\"Training examples\")\n",
+      "    plt.ylabel(\"Score\")\n",
+      "    train_sizes, train_scores, test_scores = learning_curve(\n",
+      "        estimator, X, y, cv=cv, n_jobs=n_jobs, train_sizes=train_sizes)\n",
+      "    train_scores_mean = np.mean(train_scores, axis=1)\n",
+      "    train_scores_std = np.std(train_scores, axis=1)\n",
+      "    test_scores_mean = np.mean(test_scores, axis=1)\n",
+      "    test_scores_std = np.std(test_scores, axis=1)\n",
+      "    plt.grid()\n",
+      "\n",
+      "    plt.fill_between(train_sizes, train_scores_mean - train_scores_std,\n",
+      "                     train_scores_mean + train_scores_std, alpha=0.1,\n",
+      "                     color=\"r\")\n",
+      "    plt.fill_between(train_sizes, test_scores_mean - test_scores_std,\n",
+      "                     test_scores_mean + test_scores_std, alpha=0.1, color=\"g\")\n",
+      "    plt.plot(train_sizes, train_scores_mean, 'o-', color=\"r\",\n",
+      "             label=\"Training score\")\n",
+      "    plt.plot(train_sizes, test_scores_mean, 'o-', color=\"g\",\n",
+      "             label=\"Cross-validation score\")\n",
+      "\n",
+      "    plt.legend(loc=\"best\")\n",
+      "    return plt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# digits = load_digits()\n",
+      "# X, y = digits.data, digits.target\n",
+      "\n",
+      "X = pd.merge(data.iloc[:,0:8], data.iloc[:,9:],left_index=True,right_index=True).values\n",
+      "y = data[17].values\n",
+      "\n",
+      "\n",
+      "\n",
+      "title = \"Learning Curves (Naive Bayes)\"\n",
+      "# Cross validation with 100 iterations to get smoother mean test and train\n",
+      "# score curves, each time with 20% data randomly selected as a validation set.\n",
+      "cv = cross_validation.ShuffleSplit(X.shape[0], n_iter=100,\n",
+      "                                   test_size=0.2, random_state=0)\n",
+      "\n",
+      "estimator = GaussianNB()\n",
+      "plot_learning_curve(estimator, title, X, y, ylim=(0.7, 1.01), cv=cv, n_jobs=4)\n",
+      "\n",
+      "title = \"Learning Curves (SVM, RBF kernel, $\\gamma=0.001$)\"\n",
+      "# SVC is more expensive so we do a lower number of CV iterations:\n",
+      "cv = cross_validation.ShuffleSplit(X.shape[0], n_iter=10,\n",
+      "                                   test_size=0.2, random_state=0)\n",
+      "estimator = SVC(gamma=0.001)\n",
+      "plot_learning_curve(estimator, title, X, y, (0.5, 1.01), cv=cv, n_jobs=4)\n",
+      "\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "model_forrest."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "X = pd.merge(data.iloc[:,0:8], data.iloc[:,9:],left_index=True,right_index=True).values\n",
+      "y = data[17].values\n",
+      "\n",
+      "title = \"Learning Curves (Logistic Regression)\"\n",
+      "# Cross validation with 100 iterations to get smoother mean test and train\n",
+      "# score curves, each time with 20% data randomly selected as a validation set.\n",
+      "cv = cross_validation.ShuffleSplit(X.shape[0], n_iter=100,\n",
+      "                                   test_size=0.2, random_state=0)\n",
+      "\n",
+      "estimator = tree.DecisionTreeClassifier(random_state=0)\n",
+      "plot_learning_curve(estimator, title, X, y, ylim=(0.9, 1.01), cv=cv, n_jobs=4)\n",
+      "\n",
+      "title = \"Learning Curves (Dec Tree, RBF kernel, $\\gamma=0.001$)\"\n",
+      "# SVC is more expensive so we do a lower number of CV iterations:\n",
+      "cv = cross_validation.ShuffleSplit(X.shape[0], n_iter=10,\n",
+      "                                   test_size=0.2, random_state=0)\n",
+      "estimator = LogisticRegression(C=1)\n",
+      "plot_learning_curve(estimator, title, X, y, (0.9, 1.01), cv=cv, n_jobs=4)\n",
+      "\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
