worked on project, added random forest to titanic

--- a/Project/MOOC.ipynb
+++ b/Project/MOOC.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0864df5db77dba0c64a9b06240fbc5a6121c5df064258c4fc219828d7988df12"
+  "signature": "sha256:f1f3d6aad4f261bc3a44b40dcc45f2ad6e8026deffb8c9a09f6cc445aac8c4dd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -177,11 +177,42 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data['nforum_posts'].unique()"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "array([ 0,  1,  2,  3,  5,  4,  6,  7, 13, 12,  9, 20, 15,  8], dtype=int64)"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len(data[data['nforum_posts']>18])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "6"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -3879,7 +3910,36 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data['final_cc_cname_DI'].unique()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "array(['United States', 'France', 'Unknown/Other', 'Mexico', 'Australia',\n",
+        "       'India', 'Canada', 'Russian Federation', 'Other South Asia',\n",
+        "       'Other North & Central Amer., Caribbean', 'Other Europe',\n",
+        "       'Other Oceania', 'Japan', 'Other Africa', 'Colombia', 'Germany',\n",
+        "       'Other Middle East/Central Asia', 'Poland', 'Indonesia',\n",
+        "       'Other East Asia', 'Bangladesh', 'China', 'United Kingdom',\n",
+        "       'Ukraine', 'Spain', 'Greece', 'Pakistan', 'Brazil', 'Nigeria',\n",
+        "       'Egypt', 'Other South America', 'Portugal', 'Philippines', 'Morocco'], dtype=object)"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for country in data['final_cc_cname_DI'].unique()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
